--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8181
 
-spring.cloud.gateway.routes[0].id=eko
+spring.cloud.gateway.routes[0].id=test
 spring.cloud.gateway.routes[0].uri=http://localhost:8080/
 spring.cloud.gateway.routes[0].predicates[0]=Path=/eko/**
 spring.cloud.gateway.routes[0].filters[0].name=Time
@@ -9,8 +9,19 @@ spring.cloud.gateway.routes[0].filters[1].name=RateLimiter
 spring.cloud.gateway.routes[0].filters[1].args.rateLimiter=test
 spring.cloud.gateway.routes[0].filters[2]=RewritePath=/eko/(?<segment>.*),/${segment}
 
-resilience4j.ratelimiter.instances.test.limit-refresh-period=1m
-resilience4j.ratelimiter.instances.test.limit-for-period=1000
-rate-limiter.metrics.test.max-limit=1000
-rate-limiter.metrics.test.min-limit=100
+rate-limiter.metrics.test.limit-refresh-period=1m
+rate-limiter.metrics.test.max-limit-for-period=1000
+rate-limiter.metrics.test.min-limit-for-period=100
 rate-limiter.metrics.test.slow-duration=100ms
+
+rate-limiter.metrics.member.limit-refresh-period=1m
+rate-limiter.metrics.member.max-limit-for-period=1000
+rate-limiter.metrics.member.min-limit-for-period=100
+rate-limiter.metrics.member.slow-duration=100ms
+
+rate-limiter.metrics.order.limit-refresh-period=1m
+rate-limiter.metrics.order.max-limit-for-period=500
+rate-limiter.metrics.order.min-limit-for-period=50
+rate-limiter.metrics.order.slow-duration=100ms
+
+management.endpoints.web.exposure.include=health,prometheus,metrics
